Fixed action buttons not expanding out on mobile for management UIs

--- a/src/main/design/css/components/listing-styles.scss
+++ b/src/main/design/css/components/listing-styles.scss
@@ -93,6 +93,7 @@
     .btn {
       box-shadow: none;
       flex: 1 0 auto;
+      max-width: none;
     }
 
     .btn + .btn {
